--- a/portal-empleo-frontend/src/app/offers/offers.component.scss
+++ b/portal-empleo-frontend/src/app/offers/offers.component.scss
@@ -27,7 +27,14 @@
 }
 
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.7rem;
+}
+
 .title-portal {
+  background-image: linear-gradient(.10turn, rgba(255, 255, 255, 0.596) 0 50%, rgba(112, 112, 112, 0.162) 50% 100%);
+  border-radius: 20px;
   text-align: center;
   font-size: 60px;
   font-family: 'Black Han Sans', sans-serif;
@@ -183,6 +190,7 @@ body {
   padding: 30px 40px;
   overflow: auto;
 }
+
 
 .search-menu {
   height: 56px;
@@ -548,11 +556,24 @@ body {
     }
   }
 }
+.detail-button2 {
+  background-color: #e1ebfb;
+  color: #0162ff;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 6px 8px;
+  border-radius: 4px;
+
+  &+& {
+    margin-left: 4px;
+  }
+
+}
 
 .detail-button {
   background-color: #e1ebfb;
   color: #0162ff;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 500;
   padding: 6px 8px;
   border-radius: 4px;
