--- a/portal-empleo-frontend/src/app/navbar-recluiter/navbar-recluiter.component.html
+++ b/portal-empleo-frontend/src/app/navbar-recluiter/navbar-recluiter.component.html
@@ -27,7 +27,7 @@
               <a href="/create-offers" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-bold"
                 aria-current="page">Crear Vacante</a>
   
-              <a href="#"
+              <a href="/created-vacancy"
                 class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Tus empleos creados</a>
   
               <a href="#"
