--- a/portal-empleo-frontend/src/app/create-offers/created-vacancy/created-vacancy.component.html
+++ b/portal-empleo-frontend/src/app/create-offers/created-vacancy/created-vacancy.component.html
@@ -15,13 +15,13 @@
                     </svg>
                 </div>
                 <input type="text" id="table-search"
-                    class="block p-2 pl-10 w-80 text-sm text-gray-900 rounded-lg border border-gray-300 focus:ring-blue-500
-                     focus:border-blue-500 bg-Fuchsia-300 dark:border-gray-800 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    class="block p-2 pl-10 w-80 text-sm text-gray-900 rounded-lg border-purple-300 focus:ring-blue-500
+                     focus:border-blue-500 bg-Fuchsia-300 border-2 border-pink-800 dark:placeholder-gray-400 dark:text-black dark:focus:ring-pink-500 dark:focus:border-pink-500"
                     placeholder="Filtra tu vacante aqui">
             </div>
         </div>
-        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <table class="w-full text-sm text-left text-slate-50 text-slate-50">
+            <thead class="text-xs text-slate-50 uppercase bg-zinc-900 bg-pink-700 text-slate-50">
                 <tr>
                     <th scope="col" class="p-4">
                     </th>
@@ -32,7 +32,7 @@
                         Descripcion
                     </th>
                     <th scope="col" class="py-3 px-6">
-                        Modalidad
+                        Ciudad
                     </th>
                     <th scope="col" class="py-3 px-6">
                         Salario
@@ -41,153 +41,92 @@
                         Experiencia
                     </th>
                     <th scope="col" class="py-3 px-6">
-                        fecha
+                        Fecha
+                    </th>
+                    <th scope="col" class="py-3 px-6">
+                        Ajustes
                     </th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody *ngFor="let jobs of job">
                 <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                    class="font-bold border-2 dark:bg-gray-600  dark:border-slate-50 hover:bg-purple-900 dark:hover:bg-pink-800">
                     <td class="p-4 w-4">
                         <div class="flex items-center">
                         </div>
                     </td>
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Apple MacBook Pro 17"
-                    </th>
                     <td class="py-4 px-6">
-                        Sliver
+                        {{jobs.title}}
                     </td>
                     <td class="py-4 px-6">
-                        Laptop
+                        {{jobs.workingDate}}
                     </td>
                     <td class="py-4 px-6">
-                        $2999
+                        {{jobs.location}}
                     </td>
                     <td class="py-4 px-6">
-                        <a href="#"
-                            class="font-medium text-blue-600 dark:text-blue-500 hover:underline">{{100|currency}}</a>
+                        {{jobs.salary|currency}}
                     </td>
                     <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                </tr>
-                <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <td class="p-4 w-4">
-                    </td>
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Microsoft Surface Pro
-                    </th>
-                    <td class="py-4 px-6">
-                        White
+                        {{jobs.experience}} años
                     </td>
                     <td class="py-4 px-6">
-                        Laptop PC
+                        {{jobs.createdAt | date :"dd.MM.yyyy"}}
                     </td>
                     <td class="py-4 px-6">
-                        $1999
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                </tr>
-                <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <td class="p-4 w-4">
-                    </td>
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Magic Mouse 2
-                    </th>
-                    <td class="py-4 px-6">
-                        Black
-                    </td>
-                    <td class="py-4 px-6">
-                        Accessories
-                    </td>
-                    <td class="py-4 px-6">
-                        $99
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-
-                </tr>
-                <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <td class="p-4 w-4">
-                    </td>
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Apple Watch
-                    </th>
-                    <td class="py-4 px-6">
-                        Silver
-                    </td>
-                    <td class="py-4 px-6">
-                        Accessories
-                    </td>
-                    <td class="py-4 px-6">
-                        $179
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                </tr>
-                <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <td class="p-4 w-4">
-                    </td>
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        iPad
-                    </th>
-                    <td class="py-4 px-6">
-                        Gold
-                    </td>
-                    <td class="py-4 px-6">
-                        Tablet
-                    </td>
-                    <td class="py-4 px-6">
-                        $699
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                </tr>
-                <tr class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <td class="p-4 w-4">
-                    </td>
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Apple iMac 27"
-                    </th>
-                    <td class="py-4 px-6">
-                        Silver
-                    </td>
-                    <td class="py-4 px-6">
-                        PC Desktop
-                    </td>
-                    <td class="py-4 px-6">
-                        $3999
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td>
-                    <td class="py-4 px-6">
-                        <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                        <button type="button" class="text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Ajustar</button>
+                        <button type="button" class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Borrar</button>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <nav class="flex justify-between items-center pt-2" aria-label="Table navigation">
+            <ul class="inline-flex items-center -space-x-px">
+                <li>
+                    <a href="#"
+                        class="block py-2 px-3 ml-0 leading-tight text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                        <span class="sr-only">Previous</span>
+                        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">1</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">2</a>
+                </li>
+                <li>
+                    <a href="#" aria-current="page"
+                        class="z-10 py-2 px-3 leading-tight text-blue-600 bg-blue-50 border border-blue-300 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">3</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">...</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">100</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="block py-2 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                        <span class="sr-only">Next</span>
+                        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
